# slsm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  class_template  setup  uninstall.cmake
cmake/: CMakeLists.txt  uninstall.cmake.in
cmake/dox/: CMakeLists.txt  Doxyfile.in
demos/: README.md  bimodal.cpp  bimodal_brolly.cpp  demo.cpp  dumbbell.cpp  hole_shrink.cpp  lsm.cpp  minimise_area.cpp  minimise_area_constrained.cpp  minimise_perimeter.cpp  minimise_perimeter_constrained.cpp  shape_match.cpp  shape_match_constrained.cpp  umbrella_sample.cpp
demos/shapes/: stanford-bunny.txt
dox/: CMakeLists.txt  Doxyfile  Doxyfile.in  classes.dox  compiling.dox  demos.dox  mainpage.dox  tests.dox  utils.dox
python/: README.md  bimodal.py  dumbbell.py  minimise_area.py  minimise_perimeter.py  minimise_perimeter_constrained.py  shape_match.py
python/bindings/: README.md  bind_Boundary.cpp  bind_FastMarchingMethod.cpp  bind_Hole.cpp  bind_InputOutput.cpp  bind_LevelSet.cpp  bind_MersenneTwister.cpp  bind_Mesh.cpp  bind_Optimise.cpp  bind_Sensitivity.cpp  pyslsm.cpp
src/: Boundary.cpp  Boundary.h  Common.h  Debug.h  FastMarchingMethod.cpp  FastMarchingMethod.h  Heap.cpp  Heap.h  Hole.cpp  Hole.h  InputOutput.cpp  InputOutput.h  LevelSet.cpp  LevelSet.h  MersenneTwister.h  Mesh.cpp  Mesh.h  MinUnit.h  Optimise.cpp  Optimise.h  README.md  Sensitivity.cpp  Sensitivity.h
tests/: README.md  boundary_tests.cpp  fast_marching_tests.cpp  heap_tests.cpp  level_set_tests.cpp  mesh_tests.cpp  runtests
utils/: README.md  bimodal.gp  bimodal_brolly.gp  clean.sh  dumbbell.gp  dumbbell_noise.gp  gif.sh  mimimise_area.gp  mimimise_perimeter.gp  mimimise_perimeter_constrained.gp  shape_match.gp
